# TEDEX

./: .gitignore  CHANGELOG.md  README.md  TEDEX_SYNC_RELEASE.md  agent_analysis.py  assess_selected_batches.py  bayesian_predict_te.py  flexible_plot.py  main.py  plot_XRD.py  plot_te.py  pyproject.toml  requirements.txt  run_analysis.py  te_analysis.py
configs/: lab_batches.json  lab_batches_template.json  material_features_schema.json  reference_dataset.json  reference_dataset_template.json
configs/flexible_plot_demos/: composition_grouped_bar.json  composition_scatter.json  pbse_tec_dtmax_txt.json  pbse_tec_qc_excel_multicolumn.json  pbse_tec_qc_multi_files.json  room_temp_dual_axis.json  temperature_multi_panel.json  temperature_seebeck_line.json
configs/plot_recipes/: README.md  alpha_s.json  common_labels.md  cop.json  dtmax.json  eta.json  iv_power.json  lattice.json  muh.json  nh_log.json  nh_muh.json
configs/plot_recipes/bar/: grouped_bar.json  simple_bar.json
configs/plot_recipes/device/: current_vs_cooling_capacity_qc.json  current_vs_cop.json  current_vs_efficiency.json  current_vs_voltage_power_dual.json  hot_side_temperature_vs_delta_tmax.json
configs/plot_recipes/dual_axis/: composition_vs_carrier_mobility_dual.json  temperature_vs_carrier_mobility_dual.json
configs/plot_recipes/lattice/: composition_vs_lattice_parameter.json
configs/plot_recipes/spb/: carrier_concentration_vs_mobility.json  carrier_concentration_vs_power_factor.json  carrier_concentration_vs_seebeck.json  carrier_concentration_vs_zt.json  conductivity_pf_fit.json  conductivity_seebeck_fit.json  conductivity_zt_fit.json  pf_fit.json  pisarenko_fit.json  zt_fit.json
configs/plot_recipes/temperature/: temperature_vs_carrier_concentration.json  temperature_vs_cp_over_t.json  temperature_vs_mobility.json
configs/plot_recipes/thermoeletric/: .temperature_vs_seebeck.json.swp  README.md  temperature_vs_carrier_thermal_conductivity.json  temperature_vs_conductivity.json  temperature_vs_diffusivity.json  temperature_vs_generalized_fermi_level.json  temperature_vs_lattice_thermal_conductivity.json  temperature_vs_lorenz_number.json  temperature_vs_power_factor.json  temperature_vs_quality_factor.json  temperature_vs_resistivity.json  temperature_vs_seebeck.json  temperature_vs_te_summary.json  temperature_vs_thermal_conductivity.json  temperature_vs_weighted_mobility.json  temperature_vs_zt.json
data/demo/: flexible_sactter.csv
data/demo/COP/: 1.csv  2.csv  3.csv  4.csv  device_current_vs_cop_normalized.csv
data/demo/composition_Hall/: dual_axis_composition_vs_carrier_mobility_normalized.csv  nu_muh.csv
data/demo/device power geenration/: 1.csv  2.csv  (+6 more)
data/lab/: lab_metadata.md
data/pdf_card/: CuInTe2 PDF#97-023-8958.txt  PDF_CARD_STANDARD.md  Sb2Te3 PDF#97-067-0037.txt
docs/: COMMANDS.md  DATA_LAYOUT.md  FLEXIBLE_PLOTTING.md  PROJECT_STRUCTURE.md  project_intro_basic_operations.tex
docs/demo_images/: README.md
docs/te_dex_chaptered_manual/: README.md  main.tex  main.toc
myplotstyle/: axis_formatting.py  mpl_arial.py  mpl_times.py
notebooks/: setup_env_template.ipynb
scripts/: build_notion_sync_payload.py  extract_reference_xlsx.py  plot_paper_style_te_variants.py  plot_room_temp_dual_axis.py  plot_selected_te.sh  plot_te_completion.zsh  run_flexible_plot_demos.py  sync_lab_markdown.py  sync_lab_metadata.py
scripts/analysis/: agent_analysis.py  assess_selected_batches.py  bayesian_predict_te.py  run_analysis.py  te_analysis.py
scripts/plotting/: digitize_k_edge_svg.py  flexible_plot.py  plot_te.py  plot_xrd.py
src/agents/: core_agent.py  prompts.py
src/tools/: example_xrd_lattice_fit.py  file_utils.py  flexible_plot.py  matplotlib_backend.py  plot.py  plot_XRD_data.py  plot_xrd_data.py  te_data.py  xrd_lattice.py
(+108 files in other folders)
