[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "te-analysis-plotting"
version = "1.4.0"
description = "Thermoelectric analysis, plotting, SPB fitting, and demo workflow package."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "openpyxl>=3.1",
    "argcomplete>=3.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
notebook = ["jupyterlab>=4"]

[project.scripts]
te = "main:main"
te-plot-xrd = "scripts.plotting.plot_xrd:main"
te-flex-plot = "scripts.plotting.flexible_plot:main"
te-assess-batches = "scripts.analysis.assess_selected_batches:main"
te-bayes-predict = "scripts.analysis.bayesian_predict_te:main"
te-sync-metadata = "scripts.sync_lab_metadata:main"
te-sync-markdown = "scripts.sync_lab_markdown:main"
te-paper-plots = "scripts.plot_paper_style_te_variants:main"
te-spb-effective-mass = "src.tools.spb.effective_mass_fit:main"
te-spb-performance = "src.tools.spb.performance_fit:main"
te-spb-conductivity = "src.tools.spb.conductivity_fit:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "myplotstyle*", "scripts*"]
